<resources>
    <string name="app_name">Phys Lab</string>

    <string name="prompt_passwd">Password</string>
    <string name="action_login">log in</string>
    <string name="action_register">register</string>
    <string name="action_video">Play Video</string>
    <string name="action_live">Live Broadcast</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_id">Not valid students ID.</string>
    <string name="invalid_passwd">Password should be at least 5 characters.</string>
    <string name="login_failed">Login failed.</string>
    <string name="prompt_id">Students ID</string>
    <string name="action_settings">Settings</string>

    <string name="login_button">Login Button</string>
    <string name="school_name_brief">SWJTU</string>
    <string name="school_name_full">Southwest Jiaotong University</string>
    <string name="hint_username_student">School ID Here</string>
    <string name="hint_username_teacher">Work ID Here</string>
    <string name="hint_password">Password Here</string>
    <string name="menu_course_selection">Course selection</string>
    <string name="menu_experiment">Experiment</string>
    <string name="menu_notice">Notice</string>
    <string name="menu_time_table">Timetable</string>
    <string name="action_exit">exit</string>
    <string name="action_create_qr">Create QR Code</string>
    <string name="action_scan_qr">Scan QR Code</string>
    <string name="hint">Enter Text</string>
    <string name="action_browser">Browser</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_profile">Personal Center</string>
    <string name="action_contact_teacher">Contact Teacher</string>
    <string name="hint_name">Your Real Name Here</string>
    <string name="hint_school">Name Of Your School Here</string>
    <string name="hint_classname">Your Class Nam Here</string>
    <string name="hint_phone_num">Your Cell Phone Number Here</string>
    <string name="hint_password_confirm">Confirm your password</string>
    <string name="action_built_in_browser">Built-in browser</string>
    <string name="action_test">开发者测试</string>
    <string name="action_homework">Upload homework</string>
</resources>
