<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.reality.realityapp.ui.activity.NewsInfoActivity">
    <item
        android:id="@+id/menu_time_table"
        android:orderInCategory="0"
        android:title="@string/menu_time_table"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_course_selection"
        android:icon="@drawable/logo_settings"
        android:orderInCategory="1"
        android:title="@string/menu_course_selection"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_notice"
        android:icon="@drawable/logo_settings"
        android:orderInCategory="2"
        android:title="@string/menu_notice"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_experiment"
        android:icon="@drawable/logo_settings"
        android:orderInCategory="3"
        android:title="@string/menu_experiment"
        app:showAsAction="collapseActionView" />

</menu>