<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019. 西南交大应用物理系韩宝佳
  -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:elevation="6dp"
            android:fitsSystemWindows="true"
            app:contentInsetEnd="10dp"
            app:contentInsetStart="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.physswjtu.srtp2019.widgets.RoundImageView
                    android:id="@+id/home"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    app:src="@mipmap/ic_launcher_round" />

                <com.physswjtu.srtp2019.widgets.TextView
                    android:id="@+id/my_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/menu_time_table"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/radio_group"
            android:layout_below="@id/toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/radio_group"
            android:foreground="@color/black_overlay" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio1"
                style="@style/RadioGroupButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:drawableTop="@drawable/ic_time_table_selector"
                android:text="@string/menu_time_table"
                android:textColor="@drawable/radio_textcolor_selector" />

            <RadioButton
                android:id="@+id/radio2"
                style="@style/RadioGroupButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_course_selection_selector"
                android:text="@string/menu_course_selection"
                android:textColor="@drawable/radio_textcolor_selector" />

            <View style="@style/RadioGroupButtonStyle" />

            <RadioButton
                android:id="@+id/radio3"
                style="@style/RadioGroupButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_notice_selector"
                android:text="@string/menu_notice"
                android:textColor="@drawable/radio_textcolor_selector" />

            <RadioButton
                android:id="@+id/radio4"
                style="@style/RadioGroupButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_experiment_selector"
                android:text="@string/menu_experiment"
                android:textColor="@drawable/radio_textcolor_selector" />
        </RadioGroup>

        <com.physswjtu.srtp2019.widgets.TextView
            android:id="@+id/imageview"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_ripple_blue"
            android:gravity="center"
            android:includeFontPadding="false"
            android:onClick="onViewClicked"
            android:text="@string/fa_qrcode_before"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            app:isIconFont="true" />

    </RelativeLayout>

    <!-- 侧滑导航栏 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/temp_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/include"
            layout="@layout/drawer_item_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_main" />

</androidx.drawerlayout.widget.DrawerLayout>